# Couriers_framework

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0fc8c87ae9ac_create_database.py  2b900d40d3ea_create_database_tables.py
databases/: database.py
dependencies/: alchemy.py
models/: couriers.py  models.py  order_details.py  orders.py
routers/: couriers.py  main.py  orders.py
schemas/: couriers.py  order_details.py  orders.py
structures/: couriers.py  order_details.py  orders.py
