[tool.poetry]
name = "couriers_framework"
version = "0.1.0"
description = ""
authors = ["Mohamed Kamal <M.Kamal.aly1988@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.109.1"}
SQLAlchemy = "^1.4.39"
alembic = "^1.8.1"
SQLAlchemy-Utils = "^0.38.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
